kubernetes-volumes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: pod-deployment
    namespace: homework
    labels:
        app: nginx
spec:
    replicas: 3
    strategy:
        type: RollingUpdate
        rollingUpdate:
            maxSurge: 1
            maxUnavailable: 1
    selector:
        matchLabels:
            app: nginx
    template:
        metadata:
            labels:
                app: nginx
        spec:
            nodeSelector:
                homework: "true"
            containers:
              - name: nginx-container
                image: nginx:1.25-alpine
                ports:
                  - containerPort: 8080
                    protocol: TCP
                resources:
                    limits:
                        cpu: "500m"
                        memory: "256M"
                volumeMounts:
                  - name: nginx-config-volume
                    mountPath: /etc/nginx/conf.d
                  - name: media-volume
                    mountPath: /homework
                  - name: storage-volume
                    mountPath: /homework/conf
                lifecycle:
                    preStop:
                        exec:
                            command:
                              - /bin/sh
                              - -c
                              - |
                                  rm -f /homework/index.html
                readinessProbe:
                    httpGet:
                        path: /index.html
                        port: 8080
                        httpHeaders:
                          - name: Host
                            value: homework.otus
                    initialDelaySeconds: 5
                    periodSeconds: 5
                    successThreshold: 1
                    failureThreshold: 3
                                
            volumes:
              - name: nginx-config-volume
                configMap:
                    name: nginx-config
              - name: media-volume
                persistentVolumeClaim:
                    claimName: homework-pvc
              - name: storage-volume
                configMap:
                    name: pod-config
